# Xenium_5k_analysis_pipeline

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  check_gpu_support.py  config.toml  config_HPC.toml  config_dev.toml  config_test.toml  environment.yml  mkdocs.yml  pyproject.toml  requirements-muspan.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  link_checker.yml
HPC_jobs/: 16S.sh  HLCA_full_col_inf.txt  HLCA_full_col_names.txt  HLCA_full_tissue_type.txt  airscape_hpc.sh  annotate.sh  celltype_subset.sh  hlca_full.sh  hpc_run.sh  hpc_run_analysis.sh  hpc_run_format.sh  hpc_run_full.sh  hpc_run_int.sh  hpc_run_qc.sh  hpc_test.sh  misc.sh  rename_ROI.sh  resolvi.sh  subset_adata.sh  subset_celltype.sh
config_files/: AirScape_config.toml  airscape.toml  airscape_QC.toml  airscape_annotate.toml  config.toml  config_COPD_V1_v_IPF.toml  config_HPC.toml  config_HPC_dev.toml  config_HPC_drug2cell.toml  config_HPC_format.toml  config_HPC_qc.toml  config_HPC_rename.toml  config_HPC_runs.toml  config_HPC_runs_int.toml  config_HPC_subsample.toml  config_R035.toml  config_example.toml  config_full_dataset.toml  resolvi.toml
config_files/archieve/: config_HPC_format.toml  config_HPC_subsample.toml  config_example.toml
data/: selected_cells_stats.csv
docs/: 2_configuration.md  3_RSE_best_practices.md  RSE_best_practices.md  configuration.md  content.md  index.md  installation.md
notebooks/: sample.ipynb
src/: 0_format.py  1_qc.py  2_dimension_reduction.py  3_annotate.py  4_view_images.py  5_spatial_statistics.py  6_muspan.py  concat_adata.py  helper_function.py  main.py  manual_adata.py  paths.py  summary_meterics.py  summary_meterics_plot.py
src/batch_rename/: run_batch_rename.sh  xenium_batch_rename.py  xenium_mapping.md
src/manual_src/: cellID_rename.py  celltype_level_1.py  celltype_subset.py  concat_adata.py  hlca_full.py  hlca_full_filt_process.py  hlca_full_mem_effiecent.py  hlca_full_process.py  hlca_full_umap.py  label_transfer.py  misc_plots.py  summary_meterics.py  summary_meterics_plot.py  umap_hlca.py
src/manual_src/format/: cellID_rename.py
src/manual_src/hlca/: subset_HLCA.py
src/manual_src/misc_analysis/: annotation.py  celltype_level_1.py  celltype_subset.py  subset_adata.py  summary_meterics.py
src/manual_src/misc_plots/: 16s.py  composition.py  gene_celltype.py  plot_transcript_parquet.py  transcript_parquet.py  umap.py  violin_plt.py
src/recode_spatial_transcriptomics/: 1_qc.py  2_dimension_reduction.py  4_view_images.py  5_spatial_statistics.py  6_muspan.py  __init__.py  helper_function.py  paths.py
src/recode_st/: 0_format.py  1_qc.py  2_dimension_reduction.py  3_annotate.py  4_view_images.py  5_spatial_statistics.py  6_muspan.py  __main__.py  annotate.py  config.py  denoise_resolvi.py  dimension_reduction.py  doublet_identification.py  drug2cell.py  format.py  format_data.py  helper_function.py  integrate.py  integrate_ingest.py  integrate_scvi.py  load_data.py  logging_config.py  ms_spatial_graph.py  ms_spatial_stat.py  muspan.py  paths.py  psuedobulk.py  qc.py  spatial_statistics.py  subsample_data.py  view_images.py
tests/: test_config.py  test_helper_function.py  test_logging_config.py  test_main.py
utils/: Renaming.py  embed_images.py  mapping.md
(+1 files in other folders)
