[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "recode_spatial_transcriptomics"
version = "0.1.0"

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "torch",
    "scanpy",
    "spatialdata-io",
    "squidpy",
]

[project.optional-dependencies]
dev = [
    "mkdocs==1.6.1",
    "mkdocs-include-markdown-plugin==7.1.5",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-material==9.6.12",
    "python-markdown-math==0.9",
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=src --cov-report=html --doctest-modules --ignore=src/recode_spatial_transcriptomics/__main__.py --ignore=docs/ --ignore=utils/"

[tool.ruff]
target-version = "py310"   # Minimum version for pyupgrade
extend-exclude = ["utils"]

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
    "W",   # pylint
]
pydocstyle.convention = "google"
